// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ManualInput /> should handle isbn autocites 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
+   \\"ISBN\\": \\"1234567890\\",
+   \\"author\\": Array [
+     Object {
+       \\"family\\": \\"Doe\\",
+       \\"given\\": \\"John\\",
+       \\"literal\\": \\"\\",
+     },
+     Object {
+       \\"family\\": \\"Smith\\",
+       \\"given\\": \\"Jane\\",
+       \\"literal\\": \\"\\",
+     },
+   ],
+   \\"issued\\": Object {
+     \\"date-parts\\": Array [
+       Array [
+         \\"2017\\",
+         \\"01\\",
+         \\"01\\",
+       ],
+     ],
+   },
+   \\"number-of-pages\\": \\"100\\",
+   \\"publisher\\": \\"Mocked Publisher\\",
+   \\"title\\": \\"Mocked Response Title\\",
    \\"type\\": \\"book\\",
  }"
`;

exports[`<ManualInput /> should handle url autocites 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
+   \\"URL\\": \\"https://google.com\\",
+   \\"accessed\\": Object {
+     \\"date-parts\\": Array [
+       Array [
+         \\"2018\\",
+         \\"01\\",
+         \\"01\\",
+       ],
+     ],
+   },
+   \\"author\\": Array [
+     Object {
+       \\"family\\": \\"Doe\\",
+       \\"given\\": \\"John\\",
+       \\"literal\\": \\"\\",
+     },
+     Object {
+       \\"family\\": \\"Smith\\",
+       \\"given\\": \\"Jane\\",
+       \\"literal\\": \\"\\",
+     },
+   ],
+   \\"container-title\\": \\"Mocked Site Title\\",
+   \\"issued\\": Object {
+     \\"date-parts\\": Array [
+       Array [
+         \\"2017\\",
+         \\"01\\",
+         \\"01\\",
+       ],
+     ],
+   },
+   \\"title\\": \\"Mocked Response Title\\",
    \\"type\\": \\"webpage\\",
  }"
`;

exports[`<ManualInput /> should match baseline snapshot 1`] = `
<ManualInput
  store="__SKIPPED__"
>
  <div
    className="typeSelect"
  >
    <label
      className="label"
      htmlFor="type-select"
    >
      Citation Type
    </label>
    <select
      className="select"
      id="__SKIPPED__"
      onChange={[Function]}
      value="webpage"
    >
      <option
        aria-selected={false}
        value="bill"
      >
        Bill
      </option>
      <option
        aria-selected={false}
        value="book"
      >
        Book
      </option>
      <option
        aria-selected={false}
        value="chapter"
      >
        Book Section
      </option>
      <option
        aria-selected={false}
        value="legal_case"
      >
        Case
      </option>
      <option
        aria-selected={false}
        value="paper-conference"
      >
        Conference Proceeding
      </option>
      <option
        aria-selected={false}
        value="entry-encyclopedia"
      >
        Encyclopedia Entry
      </option>
      <option
        aria-selected={false}
        value="motion_picture"
      >
        Film
      </option>
      <option
        aria-selected={false}
        value="speech"
      >
        Hearing
      </option>
      <option
        aria-selected={false}
        value="article-journal"
      >
        Journal Article
      </option>
      <option
        aria-selected={false}
        value="article-magazine"
      >
        Magazine Article
      </option>
      <option
        aria-selected={false}
        value="article-newspaper"
      >
        Newspaper Article
      </option>
      <option
        aria-selected={false}
        value="patent"
      >
        Patent
      </option>
      <option
        aria-selected={false}
        value="testing"
      >
        Test not in use
      </option>
      <option
        aria-selected={false}
        value="testing2"
      >
        Test not in use
      </option>
      <option
        aria-selected={false}
        value="report"
      >
        Report
      </option>
      <option
        aria-selected={false}
        value="legislation"
      >
        Statute
      </option>
      <option
        aria-selected={false}
        value="thesis"
      >
        Thesis
      </option>
      <option
        aria-selected={false}
        value="broadcast"
      >
        Television Broadcast
      </option>
      <option
        aria-selected={true}
        value="webpage"
      >
        Web Page
      </option>
    </select>
  </div>
  <AutoCite
    getter={[Function]}
    kind="webpage"
    placeholder="URL"
  >
    <div
      className="autocite"
    >
      <label
        htmlFor="citequery"
      >
        Autocite
      </label>
      <input
        className="input"
        id="__SKIPPED__"
        onChange={[Function]}
        onKeyDown={[Function]}
        placeholder="URL"
        type="url"
        value=""
      />
      <Button
        disabled={true}
        flat={true}
        label="Search"
        onClick={[Function]}
        type="button"
      >
        <div>
          <button
            className="btn btnFlat"
            disabled={true}
            onClick={[Function]}
            type="button"
          >
            Search
          </button>
        </div>
      </Button>
    </div>
  </AutoCite>
  <div
    className="scrollBoundaryAutocite"
    onWheel={[Function]}
  >
    <Callout
      intent="danger"
      isVisible={true}
      onDismiss={[Function]}
    />
    <ContributorList
      citationType="webpage"
      people={Array []}
    >
      <h2
        className="heading"
      >
        Contributors
      </h2>
      <div
        className="btnRow"
      >
        <Button
          flat={true}
          label="Add contributor"
          onClick={[Function]}
          type="button"
        >
          <div>
            <button
              className="btn btnFlat"
              onClick={[Function]}
              type="button"
            >
              Add contributor
            </button>
          </div>
        </Button>
      </div>
    </ContributorList>
    <MetaFields
      meta="__SKIPPED__"
    >
      <h2
        style={
          Object {
            "fontSize": 16,
          }
        }
      >
        Web Page
      </h2>
      <div
        style={
          Object {
            "display": "table",
            "padding": 10,
            "width": "100%",
          }
        }
      >
        <Field
          field={
            Object {
              "label": "Content Title",
              "pattern": ".*",
              "placeholder": "",
              "required": true,
              "value": "title",
            }
          }
          meta="__SKIPPED__"
          onChange={[Function]}
        >
          <div
            className="row"
          >
            <label
              className="label"
              htmlFor="title"
            >
              Content Title
            </label>
            <input
              className="input"
              id="__SKIPPED__"
              onChange={[Function]}
              pattern=".*"
              placeholder=""
              required={true}
              type="text"
              value=""
            />
          </div>
        </Field>
        <Field
          field={
            Object {
              "label": "Website Title",
              "pattern": ".*",
              "placeholder": "",
              "required": true,
              "value": "container-title",
            }
          }
          meta="__SKIPPED__"
          onChange={[Function]}
        >
          <div
            className="row"
          >
            <label
              className="label"
              htmlFor="container-title"
            >
              Website Title
            </label>
            <input
              className="input"
              id="__SKIPPED__"
              onChange={[Function]}
              pattern=".*"
              placeholder=""
              required={true}
              type="text"
              value=""
            />
          </div>
        </Field>
        <Field
          field={
            Object {
              "label": "URL",
              "pattern": ".*",
              "placeholder": "",
              "required": true,
              "value": "URL",
            }
          }
          meta="__SKIPPED__"
          onChange={[Function]}
        >
          <div
            className="row"
          >
            <label
              className="label"
              htmlFor="URL"
            >
              URL
            </label>
            <input
              className="input"
              id="__SKIPPED__"
              onChange={[Function]}
              pattern=".*"
              placeholder=""
              required={true}
              type="text"
              value=""
            />
          </div>
        </Field>
        <Field
          field={
            Object {
              "label": "Date",
              "pattern": "[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$",
              "placeholder": "YYYY/MM/DD or YYYY/MM or YYYY",
              "required": false,
              "value": "issued",
            }
          }
          meta="__SKIPPED__"
          onChange={[Function]}
        >
          <div
            className="row"
          >
            <label
              className="label"
              htmlFor="issued"
            >
              Date
            </label>
            <input
              className="input"
              id="__SKIPPED__"
              onChange={[Function]}
              pattern="[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$"
              placeholder="YYYY/MM/DD or YYYY/MM or YYYY"
              required={false}
              type="text"
              value=""
            />
          </div>
        </Field>
        <Field
          field={
            Object {
              "label": "Date Accessed",
              "pattern": "[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$",
              "placeholder": "YYYY/MM/DD or YYYY/MM or YYYY",
              "required": false,
              "value": "accessed",
            }
          }
          meta="__SKIPPED__"
          onChange={[Function]}
        >
          <div
            className="row"
          >
            <label
              className="label"
              htmlFor="accessed"
            >
              Date Accessed
            </label>
            <input
              className="input"
              id="__SKIPPED__"
              onChange={[Function]}
              pattern="[0-9]{4}(\\\\/[0-9]{2})?(\\\\/[0-9]{2})?(?!\\\\/)$"
              placeholder="YYYY/MM/DD or YYYY/MM or YYYY"
              required={false}
              type="text"
              value=""
            />
          </div>
        </Field>
      </div>
    </MetaFields>
  </div>
</ManualInput>
`;

exports[`<ManualInput /> should not render autocite for anything but websites or books 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -12,11 +12,11 @@
      </label>
      <select
        className=\\"select\\"
        id=\\"__SKIPPED__\\"
        onChange={[Function res]}
-       value=\\"article\\"
+       value=\\"webpage\\"
      >
        <option
          aria-selected={false}
          value=\\"bill\\"
        >
@@ -123,37 +123,109 @@
          value=\\"broadcast\\"
        >
          Television Broadcast
        </option>
        <option
-         aria-selected={false}
+         aria-selected={true}
          value=\\"webpage\\"
        >
          Web Page
        </option>
      </select>
    </div>
+   <AutoCite
+     getter={[Function anonymous]}
+     kind=\\"webpage\\"
+     placeholder=\\"URL\\"
+   >
      <div
-     className=\\"scrollBoundary\\"
+       className=\\"autocite\\"
+     >
+       <label
+         htmlFor=\\"citequery\\"
+       >
+         Autocite
+       </label>
+       <input
+         className=\\"input\\"
+         id=\\"__SKIPPED__\\"
+         onChange={[Function res]}
+         onKeyDown={[Function anonymous]}
+         placeholder=\\"URL\\"
+         type=\\"url\\"
+         value=\\"\\"
+       />
+       <Button
+         disabled={true}
+         flat={true}
+         label=\\"Search\\"
+         onClick={[Function res]}
+         type=\\"button\\"
+       >
+         <div>
+           <button
+             className=\\"btn btnFlat\\"
+             disabled={true}
+             onClick={[Function res]}
+             type=\\"button\\"
+           >
+             Search
+           </button>
+         </div>
+       </Button>
+     </div>
+   </AutoCite>
+   <div
+     className=\\"scrollBoundaryAutocite\\"
      onWheel={[Function anonymous]}
    >
      <Callout
        intent=\\"danger\\"
        isVisible={true}
        onDismiss={[Function res]}
      />
+     <ContributorList
+       citationType=\\"webpage\\"
+       people={Array []}
+     >
+       <h2
+         className=\\"heading\\"
+       >
+         Contributors
+       </h2>
+       <div
+         className=\\"btnRow\\"
+       >
+         <Button
+           flat={true}
+           label=\\"Add contributor\\"
+           onClick={[Function res]}
+           type=\\"button\\"
+         >
+           <div>
+             <button
+               className=\\"btn btnFlat\\"
+               onClick={[Function res]}
+               type=\\"button\\"
+             >
+               Add contributor
+             </button>
+           </div>
+         </Button>
+       </div>
+     </ContributorList>
      <MetaFields
        meta=\\"__SKIPPED__\\"
      >
        <h2
          style={
            Object {
              \\"fontSize\\": 16,
            }
          }
        >
-         Generic (Note)
+         Web Page
        </h2>
        <div
          style={
            Object {
              \\"display\\": \\"table\\",
@@ -163,13 +235,13 @@
          }
        >
          <Field
            field={
              Object {
-               \\"label\\": \\"Text\\",
+               \\"label\\": \\"Content Title\\",
                \\"pattern\\": \\".*\\",
-               \\"placeholder\\": \\"Note: This type may not work with certain citation styles\\",
+               \\"placeholder\\": \\"\\",
                \\"required\\": true,
                \\"value\\": \\"title\\",
              }
            }
            meta=\\"__SKIPPED__\\"
@@ -180,23 +252,159 @@
            >
              <label
                className=\\"label\\"
                htmlFor=\\"title\\"
              >
-               Text
+               Content Title
              </label>
              <input
                className=\\"input\\"
                id=\\"__SKIPPED__\\"
                onChange={[Function res]}
                pattern=\\".*\\"
-               placeholder=\\"Note: This type may not work with certain citation styles\\"
+               placeholder=\\"\\"
                required={true}
                type=\\"text\\"
                value=\\"\\"
              />
            </div>
          </Field>
+         <Field
+           field={
+             Object {
+               \\"label\\": \\"Website Title\\",
+               \\"pattern\\": \\".*\\",
+               \\"placeholder\\": \\"\\",
+               \\"required\\": true,
+               \\"value\\": \\"container-title\\",
+             }
+           }
+           meta=\\"__SKIPPED__\\"
+           onChange={[Function res]}
+         >
+           <div
+             className=\\"row\\"
+           >
+             <label
+               className=\\"label\\"
+               htmlFor=\\"container-title\\"
+             >
+               Website Title
+             </label>
+             <input
+               className=\\"input\\"
+               id=\\"__SKIPPED__\\"
+               onChange={[Function res]}
+               pattern=\\".*\\"
+               placeholder=\\"\\"
+               required={true}
+               type=\\"text\\"
+               value=\\"\\"
+             />
            </div>
+         </Field>
+         <Field
+           field={
+             Object {
+               \\"label\\": \\"URL\\",
+               \\"pattern\\": \\".*\\",
+               \\"placeholder\\": \\"\\",
+               \\"required\\": true,
+               \\"value\\": \\"URL\\",
+             }
+           }
+           meta=\\"__SKIPPED__\\"
+           onChange={[Function res]}
+         >
+           <div
+             className=\\"row\\"
+           >
+             <label
+               className=\\"label\\"
+               htmlFor=\\"URL\\"
+             >
+               URL
+             </label>
+             <input
+               className=\\"input\\"
+               id=\\"__SKIPPED__\\"
+               onChange={[Function res]}
+               pattern=\\".*\\"
+               placeholder=\\"\\"
+               required={true}
+               type=\\"text\\"
+               value=\\"\\"
+             />
+           </div>
+         </Field>
+         <Field
+           field={
+             Object {
+               \\"label\\": \\"Date\\",
+               \\"pattern\\": \\"[0-9]{4}(\\\\\\\\/[0-9]{2})?(\\\\\\\\/[0-9]{2})?(?!\\\\\\\\/)$\\",
+               \\"placeholder\\": \\"YYYY/MM/DD or YYYY/MM or YYYY\\",
+               \\"required\\": false,
+               \\"value\\": \\"issued\\",
+             }
+           }
+           meta=\\"__SKIPPED__\\"
+           onChange={[Function res]}
+         >
+           <div
+             className=\\"row\\"
+           >
+             <label
+               className=\\"label\\"
+               htmlFor=\\"issued\\"
+             >
+               Date
+             </label>
+             <input
+               className=\\"input\\"
+               id=\\"__SKIPPED__\\"
+               onChange={[Function res]}
+               pattern=\\"[0-9]{4}(\\\\\\\\/[0-9]{2})?(\\\\\\\\/[0-9]{2})?(?!\\\\\\\\/)$\\"
+               placeholder=\\"YYYY/MM/DD or YYYY/MM or YYYY\\"
+               required={false}
+               type=\\"text\\"
+               value=\\"\\"
+             />
+           </div>
+         </Field>
+         <Field
+           field={
+             Object {
+               \\"label\\": \\"Date Accessed\\",
+               \\"pattern\\": \\"[0-9]{4}(\\\\\\\\/[0-9]{2})?(\\\\\\\\/[0-9]{2})?(?!\\\\\\\\/)$\\",
+               \\"placeholder\\": \\"YYYY/MM/DD or YYYY/MM or YYYY\\",
+               \\"required\\": false,
+               \\"value\\": \\"accessed\\",
+             }
+           }
+           meta=\\"__SKIPPED__\\"
+           onChange={[Function res]}
+         >
+           <div
+             className=\\"row\\"
+           >
+             <label
+               className=\\"label\\"
+               htmlFor=\\"accessed\\"
+             >
+               Date Accessed
+             </label>
+             <input
+               className=\\"input\\"
+               id=\\"__SKIPPED__\\"
+               onChange={[Function res]}
+               pattern=\\"[0-9]{4}(\\\\\\\\/[0-9]{2})?(\\\\\\\\/[0-9]{2})?(?!\\\\\\\\/)$\\"
+               placeholder=\\"YYYY/MM/DD or YYYY/MM or YYYY\\"
+               required={false}
+               type=\\"text\\"
+               value=\\"\\"
+             />
+           </div>
+         </Field>
+       </div>
      </MetaFields>
    </div>
  </ManualInput>"
`;

exports[`<ManualInput /> should render autocite fields for books 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -12,20 +12,20 @@
      </label>
      <select
        className=\\"select\\"
        id=\\"__SKIPPED__\\"
        onChange={[Function res]}
-       value=\\"book\\"
+       value=\\"webpage\\"
      >
        <option
          aria-selected={false}
          value=\\"bill\\"
        >
          Bill
        </option>
        <option
-         aria-selected={true}
+         aria-selected={false}
          value=\\"book\\"
        >
          Book
        </option>
        <option
@@ -123,22 +123,21 @@
          value=\\"broadcast\\"
        >
          Television Broadcast
        </option>
        <option
-         aria-selected={false}
+         aria-selected={true}
          value=\\"webpage\\"
        >
          Web Page
        </option>
      </select>
    </div>
    <AutoCite
      getter={[Function anonymous]}
-     kind=\\"book\\"
-     pattern=\\"(?:[dxX]-?){10}|(?:[dxX]-?){13}\\"
-     placeholder=\\"ISBN\\"
+     kind=\\"webpage\\"
+     placeholder=\\"URL\\"
    >
      <div
        className=\\"autocite\\"
      >
        <label
@@ -149,13 +148,12 @@
        <input
          className=\\"input\\"
          id=\\"__SKIPPED__\\"
          onChange={[Function res]}
          onKeyDown={[Function anonymous]}
-         pattern=\\"(?:[dxX]-?){10}|(?:[dxX]-?){13}\\"
-         placeholder=\\"ISBN\\"
-         type=\\"text\\"
+         placeholder=\\"URL\\"
+         type=\\"url\\"
          value=\\"\\"
        />
        <Button
          disabled={true}
          flat={true}
@@ -184,11 +182,11 @@
        intent=\\"danger\\"
        isVisible={true}
        onDismiss={[Function res]}
      />
      <ContributorList
-       citationType=\\"book\\"
+       citationType=\\"webpage\\"
        people={Array []}
      >
        <h2
          className=\\"heading\\"
        >
@@ -223,11 +221,11 @@
            Object {
              \\"fontSize\\": 16,
            }
          }
        >
-         Book
+         Web Page
        </h2>
        <div
          style={
            Object {
              \\"display\\": \\"table\\",
@@ -237,11 +235,11 @@
          }
        >
          <Field
            field={
              Object {
-               \\"label\\": \\"Title\\",
+               \\"label\\": \\"Content Title\\",
                \\"pattern\\": \\".*\\",
                \\"placeholder\\": \\"\\",
                \\"required\\": true,
                \\"value\\": \\"title\\",
              }
@@ -254,11 +252,11 @@
            >
              <label
                className=\\"label\\"
                htmlFor=\\"title\\"
              >
-               Title
+               Content Title
              </label>
              <input
                className=\\"input\\"
                id=\\"__SKIPPED__\\"
                onChange={[Function res]}
@@ -271,198 +269,62 @@
            </div>
          </Field>
          <Field
            field={
              Object {
-               \\"label\\": \\"Series Title\\",
+               \\"label\\": \\"Website Title\\",
                \\"pattern\\": \\".*\\",
                \\"placeholder\\": \\"\\",
-               \\"required\\": false,
-               \\"value\\": \\"collection-title\\",
+               \\"required\\": true,
+               \\"value\\": \\"container-title\\",
              }
            }
            meta=\\"__SKIPPED__\\"
            onChange={[Function res]}
          >
            <div
              className=\\"row\\"
            >
              <label
                className=\\"label\\"
-               htmlFor=\\"collection-title\\"
+               htmlFor=\\"container-title\\"
              >
-               Series Title
+               Website Title
              </label>
              <input
                className=\\"input\\"
                id=\\"__SKIPPED__\\"
                onChange={[Function res]}
                pattern=\\".*\\"
                placeholder=\\"\\"
-               required={false}
+               required={true}
                type=\\"text\\"
                value=\\"\\"
              />
            </div>
          </Field>
          <Field
            field={
              Object {
-               \\"label\\": \\"Series Number\\",
-               \\"pattern\\": \\"[0-9]+\\",
-               \\"placeholder\\": \\"\\",
-               \\"required\\": false,
-               \\"value\\": \\"collection-number\\",
-             }
-           }
-           meta=\\"__SKIPPED__\\"
-           onChange={[Function res]}
-         >
-           <div
-             className=\\"row\\"
-           >
-             <label
-               className=\\"label\\"
-               htmlFor=\\"collection-number\\"
-             >
-               Series Number
-             </label>
-             <input
-               className=\\"input\\"
-               id=\\"__SKIPPED__\\"
-               onChange={[Function res]}
-               pattern=\\"[0-9]+\\"
-               placeholder=\\"\\"
-               required={false}
-               type=\\"text\\"
-               value=\\"\\"
-             />
-           </div>
-         </Field>
-         <Field
-           field={
-             Object {
-               \\"label\\": \\"# of Pages\\",
-               \\"pattern\\": \\"[0-9]+\\",
-               \\"placeholder\\": \\"\\",
-               \\"required\\": false,
-               \\"value\\": \\"number-of-pages\\",
-             }
-           }
-           meta=\\"__SKIPPED__\\"
-           onChange={[Function res]}
-         >
-           <div
-             className=\\"row\\"
-           >
-             <label
-               className=\\"label\\"
-               htmlFor=\\"number-of-pages\\"
-             >
-               # of Pages
-             </label>
-             <input
-               className=\\"input\\"
-               id=\\"__SKIPPED__\\"
-               onChange={[Function res]}
-               pattern=\\"[0-9]+\\"
-               placeholder=\\"\\"
-               required={false}
-               type=\\"text\\"
-               value=\\"\\"
-             />
-           </div>
-         </Field>
-         <Field
-           field={
-             Object {
-               \\"label\\": \\"Volume\\",
-               \\"pattern\\": \\"[0-9]+\\",
-               \\"placeholder\\": \\"\\",
-               \\"required\\": false,
-               \\"value\\": \\"volume\\",
-             }
-           }
-           meta=\\"__SKIPPED__\\"
-           onChange={[Function res]}
-         >
-           <div
-             className=\\"row\\"
-           >
-             <label
-               className=\\"label\\"
-               htmlFor=\\"volume\\"
-             >
-               Volume
-             </label>
-             <input
-               className=\\"input\\"
-               id=\\"__SKIPPED__\\"
-               onChange={[Function res]}
-               pattern=\\"[0-9]+\\"
-               placeholder=\\"\\"
-               required={false}
-               type=\\"text\\"
-               value=\\"\\"
-             />
-           </div>
-         </Field>
-         <Field
-           field={
-             Object {
-               \\"label\\": \\"Edition\\",
-               \\"pattern\\": \\"[0-9]+\\",
-               \\"placeholder\\": \\"\\",
-               \\"required\\": false,
-               \\"value\\": \\"edition\\",
-             }
-           }
-           meta=\\"__SKIPPED__\\"
-           onChange={[Function res]}
-         >
-           <div
-             className=\\"row\\"
-           >
-             <label
-               className=\\"label\\"
-               htmlFor=\\"edition\\"
-             >
-               Edition
-             </label>
-             <input
-               className=\\"input\\"
-               id=\\"__SKIPPED__\\"
-               onChange={[Function res]}
-               pattern=\\"[0-9]+\\"
-               placeholder=\\"\\"
-               required={false}
-               type=\\"text\\"
-               value=\\"\\"
-             />
-           </div>
-         </Field>
-         <Field
-           field={
-             Object {
-               \\"label\\": \\"Publisher\\",
+               \\"label\\": \\"URL\\",
                \\"pattern\\": \\".*\\",
                \\"placeholder\\": \\"\\",
                \\"required\\": true,
-               \\"value\\": \\"publisher\\",
+               \\"value\\": \\"URL\\",
              }
            }
            meta=\\"__SKIPPED__\\"
            onChange={[Function res]}
          >
            <div
              className=\\"row\\"
            >
              <label
                className=\\"label\\"
-               htmlFor=\\"publisher\\"
+               htmlFor=\\"URL\\"
              >
-               Publisher
+               URL
              </label>
              <input
                className=\\"input\\"
                id=\\"__SKIPPED__\\"
                onChange={[Function res]}
@@ -475,48 +337,14 @@
            </div>
          </Field>
          <Field
            field={
              Object {
-               \\"label\\": \\"Publisher Location\\",
-               \\"pattern\\": \\".*\\",
-               \\"placeholder\\": \\"\\",
-               \\"required\\": false,
-               \\"value\\": \\"publisher-place\\",
-             }
-           }
-           meta=\\"__SKIPPED__\\"
-           onChange={[Function res]}
-         >
-           <div
-             className=\\"row\\"
-           >
-             <label
-               className=\\"label\\"
-               htmlFor=\\"publisher-place\\"
-             >
-               Publisher Location
-             </label>
-             <input
-               className=\\"input\\"
-               id=\\"__SKIPPED__\\"
-               onChange={[Function res]}
-               pattern=\\".*\\"
-               placeholder=\\"\\"
-               required={false}
-               type=\\"text\\"
-               value=\\"\\"
-             />
-           </div>
-         </Field>
-         <Field
-           field={
-             Object {
                \\"label\\": \\"Date\\",
                \\"pattern\\": \\"[0-9]{4}(\\\\\\\\/[0-9]{2})?(\\\\\\\\/[0-9]{2})?(?!\\\\\\\\/)$\\",
                \\"placeholder\\": \\"YYYY/MM/DD or YYYY/MM or YYYY\\",
-               \\"required\\": true,
+               \\"required\\": false,
                \\"value\\": \\"issued\\",
              }
            }
            meta=\\"__SKIPPED__\\"
            onChange={[Function res]}
@@ -534,11 +362,11 @@
                className=\\"input\\"
                id=\\"__SKIPPED__\\"
                onChange={[Function res]}
                pattern=\\"[0-9]{4}(\\\\\\\\/[0-9]{2})?(\\\\\\\\/[0-9]{2})?(?!\\\\\\\\/)$\\"
                placeholder=\\"YYYY/MM/DD or YYYY/MM or YYYY\\"
-               required={true}
+               required={false}
                type=\\"text\\"
                value=\\"\\"
              />
            </div>
          </Field>"
`;
